# reusable_otel_metric

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
otel_metrics/: __init__.py  config.py  metrics.py
tests/: test_config.py  test_metrics.py
