[project]
name = "otel-metrics"
version = "0.1.0"
description = "Reusable OpenTelemetry metrics library with simplified instrument wrappers"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.1.0",
    "opentelemetry-api>=1.20,<2.0",
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["otel_metrics"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
